--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Edit Program is now a native program!",
   "main": "index.js",
   "scripts": {
-    "test": "electron ."
+    "test": "electron .",
+    "build": "electron-builder build --win --publish never",
+    "deploy": "electron-builder build --win --publish always"
   },
   "repository": {
     "type": "git",
@@ -18,8 +20,11 @@
   "homepage": "https://github.com/QuanMCPC/Edit#readme",
   "devDependencies": {
     "electron": "^11.1.1",
+    "electron-builder": "^22.9.1",
     "electron-packager": "^15.2.0"
   },
   "icon": "./icon.ico",
-  "dependencies": {}
+  "dependencies": {
+    "electron-updater": "^4.3.5"
+  }
 }
