--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "edit",
   "version": "1.1.0",
-  "description": "Edit Program is now a native program!",
+  "description": "Edit",
   "main": "index.js",
   "scripts": {
     "test": "electron ."
