--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "electron-packager": "^15.2.0"
   },
   "icon": "./icon.ico",
-  "dependencies": {}
+  "dependencies": {
+    "update-electron-app": "^2.0.1"
+  }
 }
