--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "edit",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Edit",
   "main": "index.js",
   "scripts": {
-    "test": "electron ."
+    "test": "electron .",
+    "buildWin": "electron-packager ./ \"edit\" --build-version=\"1.3\" --icon=\"icon.ico\" --platform=\"win32\" --win32metadata.CompanyName=\"Quan's Home\" --win32metadata.FileDescription=\"Edit Program is now a native program\" --win32metadata.ProductName=\"Edit Program (Native Program)\"",
+    "buildLinux": "electron-packager ./ \"edit\" --build-version=\"1.3\" --icon=\"icon.ico\" --platform=\"linux\""
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,9 @@
   },
   "icon": "./icon.ico",
   "dependencies": {
-    "update-electron-app": "^2.0.1"
+    "decompress-zip": "^0.2.2",
+    "electron-fetch": "^1.7.2",
+    "electron-progressbar": "^2.0.0",
+    "fs-extra": "^9.0.1"
   }
 }
