--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "icon": "./icon.ico",
   "dependencies": {
     "decompress-zip": "^0.2.2",
+    "del": "^6.0.0",
     "electron-fetch": "^1.7.2",
     "electron-progressbar": "^2.0.0",
     "fs-extra": "^9.0.1"
